syntax="proto3";
package phonyproto;
option go_package="./phonyproto";

import "google/protobuf/struct.proto";

// never changed
message PhonyWrapper {
    string id = 1;
    repeated float vector=2;
    google.protobuf.Struct metadata=3;
}